--- a/src/components/AddFunds/AddFunds.css
+++ b/src/components/AddFunds/AddFunds.css
@@ -8,23 +8,24 @@
   font-weight: 500;
   line-height: 33px;
 }
-.container {
+.funds-container {
   max-width: 840px;
   margin: 0 auto;
 }
-.card-list {
+.funds-card-list {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
   gap: 20px;
+  margin: 0 20px;
 }
 
 .card-payment {
   background-color: #fff;
   border-radius: 12px;
-  max-width: 270px;
-  width: 100%;
-  padding: 15px 30px;
+  width: 270px;
+  height: 100px;
+  padding: 15px;
 }
 .card-payment .card-body {
   display: flex;
@@ -39,15 +40,17 @@
   font-weight: 500;
 }
 .amount {
-  font-size: large;
+  font-size: 1.5rem;
   font-weight: 900;
 }
+.ribbon {
+  background-color: rgb(97, 85, 197);
+}
 @media screen and (max-width: 1100px) {
-  .container {
-    max-width: 500px;
+  .funds-container {
     margin: 0 auto;
   }
-  .card-list {
+  .funds-card-list {
     justify-content: center;
   }
 }
