--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -1,4 +1,4 @@
-.dashboard-layout {
+/* .dashboard-layout {
   background-color: #e5e5e5 !important;
   height: 100%;
   width: 100%;
@@ -22,4 +22,64 @@
 }
 .ant-layout-sider .ant-menu {
   border-radius: 12px;
+} */
+
+.dashboard-layout {
+  background-color: #e5e5e5 !important;
+  height: 100%;
+  width: 100%;
+  padding-top: 10px;
+}
+
+.site-layout {
+  height: calc(100vh - 64px);
+  overflow: auto;
+}
+
+.layout {
+  display: flex;
+  width: 100%;
+}
+
+.ant-layout-sider {
+  min-height: 450px;
+  margin-left: 42px;
+  background-color: transparent !important;
+}
+
+.ant-layout-sider-trigger {
+  display: none;
+}
+
+.ant-layout-sider .ant-menu {
+  border-radius: 12px;
+}
+
+@media (max-width: 700px) {
+  .mobile-sidebar {
+    position: fixed;
+    z-index: 1000;
+    width: 250px; /* Adjust the width as needed */
+    height: 100%;
+    left: 0;
+    top: 0;
+    background-color: white; /* Add a background color */
+  }
+
+  .ant-layout-sider-collapsed {
+    display: none;
+  }
+
+  .content-overlay {
+    position: fixed;
+    z-index: 999;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: none;
+  }
+
+  .content-overlay.show {
+    display: block;
+  }
 }
