fix mobile view

--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -57,12 +57,12 @@
 
 @media (max-width: 700px) {
   .mobile-sidebar {
-    position: fixed;
+    position: absolute !important;
     z-index: 1000;
-    width: 250px; /* Adjust the width as needed */
+    width: 250px !important; /* Adjust the width as needed */
     height: 100%;
     left: 0;
-    top: 0;
+    top: 12% !important;
     background-color: white; /* Add a background color */
   }
 
